fixed background color of collapsed nav-links

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -17,6 +17,6 @@
   display: flex;
 }
 
-.nav-item {
-  color: white;
+.nav-links {
+  background-color: rebeccapurple !important;
 }
